Attempt compiling an if statement.